# ollama_monitor

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.pi/goals/: goal_events.jsonl
.pi/goals/archived/: goal_2026060700241123_mq2xt3xz-6uofy6.md
ha_integration/custom_components/ollama_monitor/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
hooks/: pre-commit
okf/: architecture.md  index.md  overview.md
okf/api/: api-reference.md  index.md
okf/db/: index.md  schema.md
okf/deployment/: docker.md  index.md  systemd.md
okf/ha-integration/: index.md  integration.md
okf/src/: api.md  config.md  gpu.md  index.md  models.md  ollama.md  system.md  tests.md
okf/testing/: ci-cd.md  index.md  testing.md
src/: api.rs  config.rs  db.rs  gpu.rs  main.rs  models.rs  ollama.rs  system.rs  tests.rs
